--- a/assets/theme.css
+++ b/assets/theme.css
@@ -128,7 +128,24 @@
 
 #scoreHeader
 {
-    color:black;
-    font-size: 20px;
-    background-color: #99ccff;
+    font-family: "Comic sans ms";
+    background-color: #66b3ff;
+    font-size: 18px;
+    color: #333333;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+
+    border-radius: 4px;
+    border-bottom: 2px solid #e6f2ff;
+    border-top: 2px solid #66b3ff;
+}
+
+#score
+{
+    color: #525152;
+    font-size: 16px;
+    font-family: "Comic sans ms";
+    background-color: #e6f2ff;
 }
